--- a/website/index.qmd
+++ b/website/index.qmd
@@ -1,7 +1,3 @@
----
-title: "Bush Heritage R workshops"
----
-
 Hi all, we're very much looking forward to our 3 days of **R**'ing with you. 
 
 In preparation, please install [R](https://rstudio-education.github.io/hopr/starting.html), [RStudio](https://posit.co/download/rstudio-desktop/), and the following **R packages**. You can just copy and paste the code below into the console of RStudio and hit enter.
@@ -15,7 +11,7 @@ install.packages(c("tidyverse"))
 #### **Day 2 & 3 - Statistical Modelling in R**
 
 ```{r eval=FALSE}
-install.packages('ggplot2', 'patchwork', 'DHARMa', 'MASS', 'Hmsc', 'tmap', 'sf', 'terra', 'tidyr', 'vegan', 'dplyr', 'ggcorrplot', 'fields')
+install.packages(c('ggplot2', 'patchwork', 'DHARMa', 'MASS', 'Hmsc', 'tmap', 'sf', 'terra', 'tidyr', 'vegan', 'dplyr', 'ggcorrplot', 'fields'))
 ```
 
 Cheers,
