Added packages for Intro day course

--- a/website/index.qmd
+++ b/website/index.qmd
@@ -5,7 +5,7 @@ In preparation, please install [R](https://rstudio-education.github.io/hopr/star
 #### **Day 1 - Data wrangling and visualisation in R**
 
 ```{r eval=FALSE}
-install.packages(c("tidyverse"))
+install.packages(c("tidyverse", "here", "lubridate", "lme4", "ggplot2", "patchwork"))
 ```
 
 #### **Day 2 & 3 - Statistical Modelling in R**
