--- a/AdvancedR_Course_Day2/Statistical-modelling-Part_2.qmd
+++ b/AdvancedR_Course_Day2/Statistical-modelling-Part_2.qmd
@@ -16,7 +16,7 @@ embed-resources: true
 
 Here we build upon modelling skills developed in [**Part 1**](Statistical-modelling-Part_1.html) of this course. In **Part 1**, we learned how to fit models to data in a *Frequentist* paradigm.
 
-Here we will fit the same models in a *Bayesian* paradigm. Then we will build more complex, **multivariate** generalised linear models to demonstrate when they might be preferred over over frequentist approaches.
+Here we will fit the same models in a *Bayesian* paradigm. Then we will build more complex, **multivariate** generalised linear models to demonstrate when they might be preferred over frequentist approaches.
 
 We'll compare multivariate generalised linear models (i.e., model-based ordination) to other **algorithmic** approaches typically used for analysing ecological community data (e.g., nmds).
 
