--- a/website/day1.qmd
+++ b/website/day1.qmd
@@ -4,9 +4,9 @@ title: "Day 1 - Data wrangling and visualisation in R"
 
 ### Workshop Notes and Data
 
-The notes are available [here](Intro-R-and-Tidyverse.html){target="_blank"} and data are available [here](Data.zip){target="_blank"}.
+###### **Note these may change before the day of the course**
 
-**Note these may change before the day of the course**
+The notes are available [here](Intro-R-and-Tidyverse.html){target="_blank"} and data are available [here](Data.zip){target="_blank"}.
 
 ### Timetable
 
