--- a/website/index.qmd
+++ b/website/index.qmd
@@ -1,6 +1,10 @@
-Hi all, we're very much looking forward to our 3 days of **R**'ing with you. 
+### Hello!
 
-In preparation, please install [R](https://rstudio-education.github.io/hopr/starting.html), [RStudio](https://posit.co/download/rstudio-desktop/), and the following **R packages**. You can just copy and paste the code below into the console of RStudio and hit enter.
+We're very much looking forward to our 3 days of **R**'ing with you (March 26th - 28th). 
+
+In preparation, please install [R](https://rstudio-education.github.io/hopr/starting.html), [RStudio](https://posit.co/download/rstudio-desktop/). See @sec-install-r for instructions. 
+
+Once you have RStudio up and running, please install the following **R packages**. You can just copy and paste the code below into the console of RStudio and hit enter to install.
 
 #### **Day 1 - Data wrangling and visualisation in R**
 
@@ -19,3 +23,62 @@ You're also welcome to peruse the course notes linked to in the tabs above, but 
 Cheers,
 
 Christina, Caitie and Jackson
+
+#### Installing R and RStudio {#sec-install-r}
+
+##### Windows
+
+-   Download R from the [CRAN website](https://cran.r-project.org/bin/windows/base/release.htm).
+
+-   Run the `.exe` file that was just downloaded
+
+-   Go to the [RStudio download page](https://www.rstudio.com/products/rstudio/download/#download)
+
+-   Under *All Installers*, download the RStudio Installer for Windows.
+
+-   Double click the file to install it
+
+-   Once it's installed, open RStudio to make sure it works and you don't get any error messages.
+
+##### MacOS
+
+-   Download R from the [CRAN website](https://cran.r-project.org/bin/macosx/).
+
+-   Select the `.pkg` file for the latest R version
+
+-   Double click on the downloaded file to install R
+
+-   It is also a good idea to install [XQuartz](https://www.xquartz.org/) (needed by some packages)
+
+-   Go to the [RStudio download page](https://www.rstudio.com/products/rstudio/download/#download)
+
+-   Under *All Installers*, download the RStudio Installer for MacOS.
+
+-   Double click the file to install RStudio
+
+-   Once it's installed, open RStudio to make sure it works and you don't get any error messages.
+
+##### Linux
+
+-   Follow the instructions for your distribution from [CRAN](https://cloud.r-project.org/bin/linux), they provide information to get the most recent version of R for common distributions. For most distributions, you could use your package manager (e.g., for Debian/Ubuntu run `sudo apt-get install r-base`, and for Fedora `sudo yum install R`), but we don't recommend this approach as the versions provided by this are usually out of date. In any case, make sure you have at least R 3.3.1.
+
+-   Go to the [RStudio download page](https://www.rstudio.com/products/rstudio/download/#download)
+
+-   Under *All Installers*, select the version that matches your distribution and install it with your preferred method (e.g., with Debian/Ubuntu `sudo dpkg -i rstudio-YYYY.MM.X-ZZZ-amd64.deb` at the terminal).
+
+-   Once it's installed, open RStudio to make sure it works and you don't get any error messages.
+
+#### Updating R and RStudio
+
+If you already have R and RStudio installed, first check if your R version is up to date:
+
+-   When you open RStudio your R version will be printed in the console on the bottom left. Alternatively, you can type `sessionInfo()` into the console. If your R version is 4.0.0 or later, you don't need to update R for this lesson. If your version of R is older than that, download and install the latest version of R from the R project website [for Windows](https://cran.r-project.org/bin/windows/base/), [for MacOS](https://cran.r-project.org/bin/macosx/), or [for Linux](https://cran.r-project.org/bin/linux/)
+
+-   It is not necessary to remove old versions of R from your system, but if you wish to do so you can check [How do I uninstall R?](https://cran.r-project.org/bin/windows/base/rw-FAQ.html#How-do-I-UNinstall-R_003f)
+
+-   Note: The changes introduced by new R versions are usually backwards-compatible. That is, your old code should still work after updating your R version. However, if breaking changes happen, it is useful to know that you can have multiple versions of R installed in parallel and that you can switch between them in RStudio by going to `Tools > Global Options > General > Basic`.
+
+-   After installing a new version of R, you will have to reinstall all your packages with the new version. For Windows, there is a package called `installr` that can help you with upgrading your R version and migrate your package library.
+
+To update RStudio to the latest version, open RStudio and click on `Help > Check for Updates`. If a new version is available follow the instruction on screen. By default, RStudio will also automatically notify you of new versions every once in a while.
+
